openturns/1.16/_sources/auto_numerical_methods/optimization/plot_minmax_by_random_design.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_numerical_methods_optimization_plot_minmax_by_random_design.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_numerical_methods_optimization_plot_minmax_by_random_design.py:


Mix/max search and sensitivity from design
==========================================

In this example we are going to evaluate the min and max values of the output variable of interest from a sample and to evaluate the gradient of the limit state function defining the output variable of interest at a particular point.


.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    import math as m
    ot.Log.Show(ot.Log.NONE)








Create the marginal distributions of the parameters


.. code-block:: default

    dist_E = ot.Beta(0.93, 2.27, 2.8e7, 4.8e7)
    dist_F = ot.LogNormalMuSigma(30000, 9000, 15000).getDistribution()
    dist_L = ot.Uniform(250, 260)
    dist_I = ot.Beta(2.5, 1.5, 3.1e2, 4.5e2)
    marginals = [dist_E, dist_F, dist_L, dist_I]
    distribution = ot.ComposedDistribution(marginals)








Sample inputs


.. code-block:: default

    sampleX = distribution.getSample(100)








Create the model


.. code-block:: default

    model = ot.SymbolicFunction(['E', 'F', 'L', 'I'], ['F*L^3/(3*E*I)'])








Evaluate outputs


.. code-block:: default

    sampleY = model(sampleX)








Get min and max


.. code-block:: default

    minY = sampleY.getMin()
    minX = sampleX[sampleY.find(minY)]
    print('min: y=', minY, ' with x=', minX)
    maxY = sampleY.getMax()
    maxX = sampleX[sampleY.find(maxY)]
    print('max: y=', maxY, ' with x=', maxX)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    min: y= [5.75634]  with x= [3.92855e+07,18899.8,250.704,438.977]
    max: y= [35.0772]  with x= [3.20895e+07,82958.4,258.244,423.096]




Get sensitivity at min


.. code-block:: default

    model.gradient(minX)





.. raw:: html

    <p>[[ -1.46526e-07 ]<br>
     [  0.00030457  ]<br>
     [  0.0688821   ]<br>
     [ -0.013113    ]]</p>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.004 seconds)


.. _sphx_glr_download_auto_numerical_methods_optimization_plot_minmax_by_random_design.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_minmax_by_random_design.py <plot_minmax_by_random_design.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_minmax_by_random_design.ipynb <plot_minmax_by_random_design.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
